--- a/index.html
+++ b/index.html
@@ -4,28 +4,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet">
     <title>toBoolist</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-
+        <img src="img/Logo.png" alt="logo">
+        <span>
+            <strong>Toboolist</strong>
+        </span>
     </header>
 
-    <div id="container">
+    <div id="main-body">
         <nav>
-
+            <div class="container">
+                <button id="light-blue">Add Task</button>
+                <button id="white">Add Section</button>
+            </div>
         </nav>
 
-        <main>
-            <!-- section new task -->
+        <div class="container">
+            <main>
+                <!-- section new task -->
+                <section>
+                    <ul>
+                        <strong>New task</strong>
+                        <li>
+                            <span class="sign check">&check;</span>
+                            Quarterly Newsletter
+                            <span class="label editorial">Editorial</span>
+                        </li>
+                    </ul>
+                </section>
 
+                <!-- section today -->
+                <section>
+                    <ul>
+                        <strong>Today</strong>
+                        <li>
+                            <span class="sign check">&check;</span>
+                            Recruiting blog post
+                            <span class="label editorial">Editorial</span>
+                        </li>
 
-            <!-- section today -->
+                        <li>
+                            <span class="sign check">&check;</span>
+                            Mobile app launch
+                            <span class="label q1-goals">Q1 Goals</span>
+                        </li>
 
+                        <li>
+                            <span class="sign cross">&cross;</span>
+                            Interview John H.
+                            <span class="label recruiting">Recruiting</span>
+                        </li>
 
-            <!-- section upcoming -->
-        </main>
+                        <li>
+                            <span class="sign check">&check;</span>
+                            Summit update to mobile storefronts
+                            <span class="label mobile">Mobile</span>
+                        </li>
+                    </ul>
+                </section>
+
+                <!-- section upcoming -->
+                <section>
+                    <ul>
+                        <strong>Upcoming</strong>
+                        <li>
+                            <span class="sign cross">&cross;</span>
+                            Schedule meeting with Alex
+                            <span class="label recruiting">Recruiting</span>
+                        </li>
+
+                        <li>
+                            <span class="sign check">&check;</span>
+                            Homepage refresh
+                            <span class="label website">Website</span>
+                        </li>
+
+                        <li>
+                            <span class="sign check">&check;</span>
+                            Onboard new Sales team members
+                            <span class="label sales">Sales</span>
+                        </li>
+
+                        <li>
+                            <span class="sign check">&check;</span>
+                            Review editorial calendar
+                            <span class="label editorial last">Editorial</span>
+                        </li>
+                    </ul>
+                </section>
+            </main>
+        </div>
     </div>
     
 </body>
