vertical-align logo

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <li>
                             <span class="sign check">&check;</span>
                             Review editorial calendar
-                            <span class="label editorial last">Editorial</span>
+                            <span class="label editorial">Editorial</span>
                         </li>
                     </ul>
                 </section>
